# BDNoSQL-Repo

./: README.md  generar_datos.py  pyproject.toml  req.txt  requirements.txt
1_redis/: consultas.ipynb  docker-compose.yml  failover.py  ingesta_alvaro.py  ingesta_javi.py  ingesta_r.py  sentinel.conf
1_redis/cloud/: access_example.toml  ingesta.py
1_redis/local/: consultas.ipynb  docker-compose.yml  ingesta.py  ingesta_alvaro.py  ingesta_javi.py  manual_docker.md  sentinel.conf
1_redis/local/failover/: failover.py  failover_dockerfile
1_redis/local/hospital-app/: app.py  manual_app.md  redis_connection.py
1_redis/local/hospital-app/templates/: base.html  colas.html  empleados.html  index.html
2_cassandra/: manual_cassandra.md  seed.py  telemetria_hospital.csv
3_mongoDB/: generar_datos.js
3_mongodb/: consultas.js  generar_datos.txt  ingesta.js  parte_c.js
4_neo4j/: Neo4j-c919413c-Created-2025-12-20.txt  consultas.cypher  funcionalidad.py  funcionalidad_consulta.cypher  ingesta.cypher
app-mds/: .env  package-lock.json  package.json  server.js
app-mds/public/: index.html
