[project]
name = "bdnosql-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cassandra-driver>=3.29.3",
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "python-multipart>=0.0.20",
    "redis>=7.0.0",
    "toml>=0.10.2",
    "tomli>=2.3.0",
    "uvicorn>=0.38.0",
]
